welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: identifier expected but 'false' found.
def haveBaggle():Boolean = {var vuBiscuit: Boolean == false
                                                      ^